# termbox2

./: README.md  cabal.project  termbox2.cabal
cbits/termbox2/src/: termbox2.c
src/: Termbox2.hs
src/Termbox2/: Internal.hs
termbox2/: termbox2.cabal
termbox2-bindings/: termbox2-bindings.cabal
termbox2-bindings/src/Termbox2/: Bindings.hs
termbox2/src/: Termbox2.hs
