cabal-version: 2.4

name: termbox2
version: 0.1.0
category: User Interfaces
description:
  This package provides a thin wrapper around @termbox2@ (commit @4ac33796ccb5276436fc269ade9ffbe36e205c51@),
  a simple C library for writing text-based user interfaces: <https://github.com/termbox/termbox2>
  .
  The full source of @termbox2@ is bundled with 32-bit color support enabled; you do not need to install any system
  packages to use this library.
synopsis: termbox2 bindings
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
homepage: https://github.com/termbox/termbox2-haskell
bug-reports: https://github.com/termbox/termbox2-haskell/issues
copyright: (c) 2022, Mitchell Rosen
license: BSD-3-Clause AND MIT
license-files: LICENSE, cbits/termbox2/LICENSE
build-type: Simple
tested-with: GHC ==8.10.7, GHC ==9.0.2, GHC ==9.2.2
x-revision: 1

extra-source-files:
  cbits/termbox2/LICENSE
  cbits/termbox2/include/termbox2.h
  cbits/termbox2/src/termbox2.c
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/termbox/termbox-haskell.git

library
  build-depends: base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16
  c-sources:
    cbits/termbox2/src/termbox2.c
  default-language: Haskell2010
  exposed-modules:
    Termbox2
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  hs-source-dirs: src
  include-dirs: cbits/termbox2/include
