cabal-version: 2.4

name: termbox2
version: 0.1.0
category: User Interfaces
description:
  This package provides a high-level interface to the @termbox2@ C library (<https://github.com/termbox/termbox2>).
synopsis: termbox2
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
homepage: https://github.com/mitchellwrosen/termbox2
bug-reports: https://github.com/mitchellwrosen/termbox2/issues
copyright: (c) 2022, Mitchell Rosen
license: BSD-3-Clause
license-files: LICENSE
build-type: Simple
tested-with: GHC ==8.10.7, GHC ==9.0.2, GHC ==9.2.2

extra-source-files:
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/termbox2.git

library
  build-depends:
    base ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16,
    bytestring ^>= 0.11.3,
    termbox2-bindings ^>= 0.1.0,
    text ^>= 2.0,
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
  default-language: Haskell2010
  exposed-modules:
    Termbox2
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  hs-source-dirs: src
